# carlo

./: README.md  carlo.py  setup.cfg
carlo/: __init__.py  __main__.py
carlo/carlo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
