[metadata]
name = carlo
version = 0.1.8
author = BoppreH
author_email = github@boppreh.com
description = Interactively plot streaming sequences of numbers 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boppreh/carlo
project_urls =
    Bug Tracker = https://github.com/boppreh/carlo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib>=3.4.3

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    carlo = carlo.__main__:main